--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
 <body>
-<h1 class="text-center">Zagraj w okręty z super generałem Tomaszem!</h1>
+<h1 class="text-center" id="mainText">Zagraj w okręty z super generałem Tomaszem!</h1>
 
         <table>
                 <tr>
