--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
 <h1 class="text-center" id="mainText">Zagraj w okręty z super generałem Tomaszem!</h1>
 
+<div id="board">
         <table>
                 <tr>
                     <td></td>
@@ -93,12 +94,29 @@
                 </tr>
                 
         </table>
-
-<h2 class ="h2 text-center" id="message"></h2>
-<div id ="results" class = "container-fluid">
-    <p class="text-center"></p>
 </div>
 
+<div class"row">
+    <div class="col-md-4 col-md-offset-4">
+    <h2 class ="h2 text-center" id="message"></h2>
+    <div id ="mistakes" class = "container-fluid">
+    <p class="text-center"></p>
+    </div>
+
+    <div class="input-group" id="divName">
+    <span class="input-group-btn">
+        <button class="btn btn-default" type="button" id="btnName">Dodaj do tabeli wyników</button>
+    </span>
+    <input type="text" class="form-control text-center" placeholder="Username" aria-describedby="name" >
+    </div>
+    <table id="results" class="table table-striped text-center">
+    <tr>
+        <td>Nick</td>
+        <td>Ilosc bledow</td>
+    </tr>
+    </table>
+</div>
+</div>
 
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
