--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 
-<body data-ng-app="myModule" data-ng-controller="myController">
+<body>
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -44,27 +44,20 @@
     </div>
 </nav>
 
-<div class="row" data-ng-controller="myController">
+<div class="row">
     <div class="col-md-4 col-md-offset-4">
         <div class="input-group" id="divName">
             <span class="input-group-btn">
-               <button class="btn btn-default" type="button" id="btnName" ng-click="addUser()">Add me to the winner's table</button>
+               <button class="btn btn-default" type="button" id="btnName">Add me to the winner's table</button>
             </span>
-            <input id="newUserName" type="text" class="form-control text-center" data-ng-keypress="$event.which === 13 && addUser()" placeholder="Username" aria-describedby="name" >
+            <input id="newUserName" type="text" class="form-control text-center" placeholder="Username" aria-describedby="name" >
         </div>
         <div id="results-container" >
-            <div class="input-group">
-                <span class="input-group-addon" id="basic-addon1">Find a friend</span>
-                <input type="text" class="form-control" placeholder="username" ng-model="username" aria-describedby="basic-addon1">
-            </div>
             <table id="results" class="table table-striped text-center">
             <tr>
                 <td>Nick</td>
                 <td>Mistakes</td>
             </tr>
-            <tr class="table table-striped" data-ng-repeat="user in users | filter:username | orderBy:'mistakes'">
-                <td > {{user.name}}</td> <td>{{user.mistakes}}</td>
-            </tr> 
             </table>
             <button id="play" type="button" class="btn btn-primary play">Play again!</button>
         </div>
