--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li><a class="active play" role="button">Play <span class="sr-only"></span></a></li>
-                <li><a id="resultsMenu" role="button">Results</a></li>
+                <li><a id="resultsMenu" role="button">Top10 Results</a></li>
             </ul>
         </div>
     </div>
@@ -71,6 +71,11 @@
     <div class="col-md-2">
         <h1 class = "text-center" id="message"></h1>
         <h2 class = "text-center" id="mistakes"></h2>
+        <button id="generatePositionsButton" type="button" class="btn btn-default center-block play">
+            Random positions
+            <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+        </button>
+        
     </div>
     <div class="col-md-5">
         <h2 class = "text-center">Player</h2>
